force-app/main/default/objects/AI_Prompt_Action__c/AI_Prompt_Action__c.object-meta.xml
<CustomObject>
    <label>Prompt Action</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>