force-app/main/default/objects/AI_Prompt_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prompt_Action</valueSetName>
    </valueSet>
</CustomField>