force-app/main/default/objects/AI_Prompt_Action__c/fields/Action_Label__c.field-meta.xml
<CustomField>
    <fullName>Action_Label__c</fullName>
    <formula>CASE(
TEXT(Action__c),
&apos;Update Field&apos;, &apos;Field: &apos;&amp; Field_API_Name__c,
&apos;Create Record&apos;, &apos;Object: &apos;&amp; Object_Name__c,
&apos;Invoke Flow&apos;, &apos;Flow: &apos;&amp; Flow_API_Name__c,
&apos;Invoke Apex&apos;, &apos;Apex Class: &apos;&amp; Apex_Class_Name__c,
&apos;Open a Form&apos;, &apos;Object: &apos;&amp; Object_Name__c,
&apos;&apos;
)</formula>
    <label>Action Label</label>
    <type>Text</type>
</CustomField>