force-app/main/default/objects/AI_Prompt_Action__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <label>Prompt</label>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Prompt Actions</relationshipLabel>
    <relationshipName>Prompt_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>