force-app/main/default/objects/AI_Prompt_Action__c/fields/Append_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Append_Timestamp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Append Timestamp</label>
    <type>Checkbox</type>
</CustomField>