force-app/main/default/objects/AI_Prompt_Action__c/fields/Prompt_Component__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Component__c</fullName>
    <label>Prompt Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>